fix(api): code blocks had a minor alignment issue after introducing the overflow

--- a/css/api.css
+++ b/css/api.css
@@ -21,6 +21,7 @@ code:not([class]) {
 	background-color: #FFF;
 	overflow: auto;
 	max-width: 100%;
+	vertical-align: middle;
 }
 
 a {
